# OSBot-Docker

./: pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
tests/unit/apis/: test_API_Docker.py
tests/unit/helpers/: test_Container__Lambda_Python.py  test_Docker_Lambda__Python.py  test_Yaml.py
