[tool.poetry]
name        = "osbot_docker"
version     = "v0.4.0"
description = "OWASP Security Bot - Docker"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/OSBot-Docker"
repository  = "https://github.com/owasp-sbot/OSBot-Docker"

[tool.poetry.dependencies]
python          = "^3.7"
osbot-utils     = "*"
docker          = "*"
python-dotenv   = "*"
pyyaml          = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
